--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "run": "node src/server.js"
+    "start": "nohup node src/server.js &"
   },
   "keywords": [],
   "author": "",
